--- a/deploy-NetworkIAC/networkIAC.yml
+++ b/deploy-NetworkIAC/networkIAC.yml
@@ -1,5 +1,5 @@
 Description: >
-    Michael Bali / Udacity
+    Author: Michael Bali 
     This template deploys a VPC, with a pair of public and private subnets in a single Availabilty Zone. It deploys an Internet Gateway, with a default 
     route on the public subnets. It deploys a  NAT Gateway, 
     and default routes for them in the private subnets.
